# test_ci

./: .gitignore  .pylintrc  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
poetry_project/: main.py  settings.py
tests/: test_status.py
